# log-reg-with-email-django

./: README.md  doc.yaml  pyproject.toml
log_reg/: manage.py
log_reg/app/: views.py
log_reg/app/migrations/: 0001_initial.py
log_reg/app/templates/: login.html  register.html
log_reg/log_reg/: asgi.py  settings.py  urls.py  wsgi.py
