[tool.poetry]
name = "log-reg-with-email-django"
version = "0.1.0"
description = ""
authors = ["ssssplassssh <igorrosolovskij2016@gmail.com>"]
readme = "README.md"
packages = [{include = "log_reg_with_email_django"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^4.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
